Renamed strands_upper_body_detector to upper_body_detector

--- a/strands_pedestrian_tracking/CMakeLists.txt
+++ b/strands_pedestrian_tracking/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
     std_msgs 
     message_generation
     image_transport
-    strands_upper_body_detector
+    upper_body_detector
     ground_plane_estimation
     strands_ground_hog
     strands_visual_odometry
