strands_visual_odometry is now visual_odometry

--- a/strands_pedestrian_tracking/CMakeLists.txt
+++ b/strands_pedestrian_tracking/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
     upper_body_detector
     ground_plane_estimation
     strands_ground_hog
-    strands_visual_odometry
+    visual_odometry
     )
 
 find_package(Qt4 REQUIRED COMPONENTS QtCore QtGui)
