--- a/strands_pedestrian_tracking/package.xml
+++ b/strands_pedestrian_tracking/package.xml
@@ -29,7 +29,7 @@
   <build_depend>upper_body_detector</build_depend>
   <build_depend>ground_plane_estimation</build_depend>
   <build_depend>strands_ground_hog</build_depend>
-  <build_depend>strands_visual_odometry</build_depend>
+  <build_depend>visual_odometry</build_depend>
 
   <run_depend>message_filters</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -45,7 +45,7 @@
   <run_depend>upper_body_detector</run_depend>
   <run_depend>ground_plane_estimation</run_depend>
   <run_depend>strands_ground_hog</run_depend>
-  <run_depend>strands_visual_odometry</run_depend>
+  <run_depend>visual_odometry</run_depend>
 
   <export/>
 </package>
