--- a/strands_perception_people_utils/package.xml
+++ b/strands_perception_people_utils/package.xml
@@ -54,7 +54,7 @@
   <build_depend>bayes_people_tracker</build_depend>
   <build_depend>strands_pedestrian_tracking</build_depend>
   <build_depend>upper_body_detector</build_depend>
-  <build_depend>strands_visual_odometry</build_depend>
+  <build_depend>visual_odometry</build_depend>
   <run_depend>eigen</run_depend>
   <run_depend>eigen_conversions</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -69,7 +69,7 @@
   <run_depend>bayes_people_tracker</run_depend>
   <run_depend>strands_pedestrian_tracking</run_depend>
   <run_depend>upper_body_detector</run_depend>
-  <run_depend>strands_visual_odometry</run_depend>
+  <run_depend>visual_odometry</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
