--- a/detector_msg_to_pose_array/package.xml
+++ b/detector_msg_to_pose_array/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>strands_perception_people_utils</name>
+  <name>detector_msg_to_pose_array</name>
   <version>0.0.0</version>
-  <description>The strands_perception_people_utils package</description>
+  <description>The detector_msg_to_pose_array package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/strands_perception_people_utils</url> -->
+  <!-- <url type="website">http://wiki.ros.org/detector_msg_to_pose_array</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,36 +40,17 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>eigen</build_depend>
-  <build_depend>eigen_conversions</build_depend>
+  <build_depend>genpy</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>mongodb_store</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>tf_conversions</build_depend>
-  <build_depend>bayes_people_tracker</build_depend>
-  <build_depend>strands_pedestrian_tracking</build_depend>
-  <build_depend>upper_body_detector</build_depend>
-  <build_depend>visual_odometry</build_depend>
-  <run_depend>eigen</run_depend>
-  <run_depend>eigen_conversions</run_depend>
+  <build_depend>roslib</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>rostopic</build_depend>
+  <run_depend>genpy</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>mongodb_store</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>tf_conversions</run_depend>
-  <run_depend>bayes_people_tracker</run_depend>
-  <run_depend>strands_pedestrian_tracking</run_depend>
-  <run_depend>upper_body_detector</run_depend>
-  <run_depend>visual_odometry</run_depend>
+  <run_depend>roslib</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>rostopic</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
