--- a/bayes_people_tracker/package.xml
+++ b/bayes_people_tracker/package.xml
@@ -13,6 +13,8 @@
   <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>boost</build_depend>
   <build_depend>bayes_tracking</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
@@ -20,6 +22,8 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>visualization_msgs</build_depend>
+
+  <run_depend>boost</run_depend>
   <run_depend>bayes_tracking</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
