--- a/detector_msg_to_pose_array/CMakeLists.txt
+++ b/detector_msg_to_pose_array/CMakeLists.txt
@@ -28,3 +28,7 @@ install(PROGRAMS
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY config 
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
