--- a/odometry_to_motion_matrix/CMakeLists.txt
+++ b/odometry_to_motion_matrix/CMakeLists.txt
@@ -1,112 +1,42 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(odometry_to_motion_matrix)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(PkgConfig REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   eigen
   eigen_conversions
-  #geometry_msgs
   nav_msgs
   roscpp
-  #mongodb_store
-  #sensor_msgs
-  std_msgs
-  #message_generation
   tf
   tf_conversions
-  #bayes_people_tracker
-  #strands_pedestrian_tracking
-  #upper_body_detector
   visual_odometry
 )
-#pkg_check_modules(EIGEN REQUIRED eigen3)
 
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## Generate messages in the 'msg' folder
-#add_message_files(
-  #FILES
-  #Logging.msg
-#)
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-#generate_messages(
-  #DEPENDENCIES
-  #std_msgs
-  #geometry_msgs
-  #bayes_people_tracker
-  #strands_pedestrian_tracking
-  #upper_body_detector
-#)
-
+###################################
 ## catkin specific configuration ##
 ###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if you package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES odometry_to_motion_matrix
-#  CATKIN_DEPENDS eigen roscpp sensor_msgs std_msgs 
-#  DEPENDS system_lib
+  CATKIN_DEPENDS
+    eigen_conversions
+    nav_msgs
+    roscpp
+    tf
+    tf_conversions
+    visual_odometry
 )
 
 ###########
 ## Build ##
 ###########
 
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
-# include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  #${EIGEN_INCLUDE_DIRS}
 )
 
-## Declare a cpp library
-# add_library(odometry_to_motion_matrix
-#   src/${PROJECT_NAME}/odometry_to_motion_matrix.cpp
-# )
-
-## Declare a cpp executable
 add_executable(odom2visual src/odom2visual/main.cpp)
 
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
 add_dependencies(odom2visual ${catkin_EXPORTED_TARGETS})
 
-## Specify libraries to link a library or executable target against
 target_link_libraries(odom2visual
   ${catkin_LIBRARIES}
 )
@@ -115,46 +45,12 @@ target_link_libraries(odom2visual
 ## Install ##
 #############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+install(TARGETS odom2visual
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables and/or libraries for installation
-# install(TARGETS odometry_to_motion_matrix odometry_to_motion_matrix_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_odometry_to_motion_matrix.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
