--- a/odometry_to_motion_matrix/package.xml
+++ b/odometry_to_motion_matrix/package.xml
@@ -4,79 +4,31 @@
   <version>0.0.0</version>
   <description>The odometry_to_motion_matrix package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="cdondrup@todo.todo">cdondrup</maintainer>
+  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
 
+  <license>MIT</license>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <url type="website">https://github.com/strands-project/strands_perception_people</url> 
 
+  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 
 
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/odometry_to_motion_matrix</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>eigen</build_depend>
   <build_depend>eigen_conversions</build_depend>
-  <!--<build_depend>geometry_msgs</build_depend>-->
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-  <!--<build_depend>mongodb_store</build_depend>-->
-  <!--<build_depend>sensor_msgs</build_depend>-->
-  <!--<build_depend>std_msgs</build_depend>-->
-  <!--<build_depend>message_generation</build_depend>-->
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
-  <!--<build_depend>bayes_people_tracker</build_depend>-->
-  <!--<build_depend>strands_pedestrian_tracking</build_depend>-->
-  <!--<build_depend>upper_body_detector</build_depend>-->
   <build_depend>visual_odometry</build_depend>
+  
   <run_depend>eigen</run_depend>
   <run_depend>eigen_conversions</run_depend>
-  <!--<run_depend>geometry_msgs</run_depend>-->
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
-  <!--<run_depend>mongodb_store</run_depend>-->
-  <!--<run_depend>sensor_msgs</run_depend>-->
-  <!--<run_depend>std_msgs</run_depend>-->
-  <!--<run_depend>message_runtime</run_depend>-->
   <run_depend>tf</run_depend>
   <run_depend>tf_conversions</run_depend>
-  <!--<run_depend>bayes_people_tracker</run_depend>-->
-  <!--<run_depend>strands_pedestrian_tracking</run_depend>-->
-  <!--<run_depend>upper_body_detector</run_depend>-->
   <run_depend>visual_odometry</run_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
+  <export/>
 </package>
