--- a/bayes_people_tracker/CMakeLists.txt
+++ b/bayes_people_tracker/CMakeLists.txt
@@ -78,3 +78,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
