--- a/perception_people_launch/package.xml
+++ b/perception_people_launch/package.xml
@@ -6,14 +6,25 @@
 
   <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
-  <url type="website">http://www.vision.rwth-aachen.de/</url>
+  <url type="website">https://github.com/strands-project/strands_perception_people</url>
 
   <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
   <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
   
   <buildtool_depend>catkin</buildtool_depend>
+
+  <run_depend>odometry_to_motion_matrix</run_depend>
+  <run_depend>ground_plane_estimation</run_depend>
+  <run_depend>upper_body_detector</run_depend>
+  <run_depend>strands_pedestrian_tracking</run_depend>
+  <run_depend>bayes_people_tracker</run_depend>
+  <run_depend>detector_msg_to_pose_array</run_depend>
+  <run_depend>leg_detector</run_depend>
+  <run_depend>people_msgs</run_depend>
+  <run_depend>bayes_people_tracker_logging</run_depend>
+  <run_depend>strands_ground_hog</run_depend>
 
   <export/>
 </package>
