--- a/strands_pedestrian_tracking/package.xml
+++ b/strands_pedestrian_tracking/package.xml
@@ -2,49 +2,51 @@
 <package>
   <name>strands_pedestrian_tracking</name>
   <version>0.0.0</version>
-  <description>The tracking package</description>
+  <description>The strands_pedestrian_tracking package</description>
 
   <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
 
-  <license>TODO</license>
+  <license>BSD</license>
 
-  <url type="website">http://www.vision.rwth-aachen.de/</url>
+  <url type="website">https://github.com/strands-project/strands_perception_people</url>
 
-  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
   <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
+  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
   
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>message_filters</build_depend>
+  <build_depend>boost</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>ground_plane_estimation</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>libqt4-dev</build_depend>
+  <build_depend>message_filters</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
-  <build_depend>tf</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>libqt4-dev</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>upper_body_detector</build_depend>
-  <build_depend>ground_plane_estimation</build_depend>
   <build_depend>strands_ground_hog</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>upper_body_detector</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <build_depend>visual_odometry</build_depend>
 
-  <run_depend>message_filters</run_depend>
+  <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>ground_plane_estimation</run_depend>
+  <run_depend>image_transport</run_depend>
+  <run_depend>libqt4-dev</run_depend>
+  <run_depend>message_filters</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  <run_depend>tf</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>libqt4-dev</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>upper_body_detector</run_depend>
-  <run_depend>ground_plane_estimation</run_depend>
   <run_depend>strands_ground_hog</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>upper_body_detector</run_depend>
+  <run_depend>visualization_msgs</run_depend>
   <run_depend>visual_odometry</run_depend>
 
   <export/>
