--- a/libcudaHOG/pkgconfig/cudaHOG.pc.in
+++ b/libcudaHOG/pkgconfig/cudaHOG.pc.in
@@ -4,7 +4,7 @@ libdir=${exec_prefix}/lib
 includedir=${prefix}/include/cudaHOG
 
 Name: cudaHOG
-Description: A library used to detect pedestrians by analising rgba images.
+Description: A library used to detect people by analising rgba images.
 Version: 1.1_b
 Cflags: -I${includedir}
 Libs: -L${libdir} -lcudaHOG
