--- a/mdl_people_tracker/config/mdl_people_tracker.yaml
+++ b/mdl_people_tracker/config/mdl_people_tracker.yaml
@@ -1,7 +1,7 @@
 #=====================================
 # Pedestrian tracking parameters
 #=====================================
-pedestrian_tracking: 
+mdl_people_tracker: 
     #=====================================
     # Input paths
     #=====================================
