--- a/bayes_people_tracker_logging/package.xml
+++ b/bayes_people_tracker_logging/package.xml
@@ -20,7 +20,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>mongodb_store</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>strands_pedestrian_tracking</build_depend>
+  <build_depend>mdl_people_tracker</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>upper_body_detector</build_depend>
   <run_depend>bayes_people_tracker</run_depend>
@@ -30,7 +30,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>mongodb_store</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>strands_pedestrian_tracking</run_depend>
+  <run_depend>mdl_people_tracker</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>upper_body_detector</run_depend>
 
