--- a/perception_people_launch/package.xml
+++ b/perception_people_launch/package.xml
@@ -18,7 +18,7 @@
   <run_depend>odometry_to_motion_matrix</run_depend>
   <run_depend>ground_plane_estimation</run_depend>
   <run_depend>upper_body_detector</run_depend>
-  <run_depend>strands_pedestrian_tracking</run_depend>
+  <run_depend>mdl_people_tracker</run_depend>
   <run_depend>bayes_people_tracker</run_depend>
   <run_depend>detector_msg_to_pose_array</run_depend>
   <run_depend>leg_detector</run_depend>
