Removing mongoclient from linked libraries

--- a/strands_head_orientation/CMakeLists.txt
+++ b/strands_head_orientation/CMakeLists.txt
@@ -101,7 +101,7 @@ add_dependencies(status ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(strands_head_orientation ${catkin_LIBRARIES})
-target_link_libraries(store_detections mongoclient ${catkin_LIBRARIES})
+target_link_libraries(store_detections ${catkin_LIBRARIES})
 target_link_libraries(start ${catkin_LIBRARIES})
 target_link_libraries(stop ${catkin_LIBRARIES})
 target_link_libraries(status ${catkin_LIBRARIES})
