--- a/strands_head_orientation/package.xml
+++ b/strands_head_orientation/package.xml
@@ -49,6 +49,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>mongodb_store</build_depend>
   <build_depend>mongodb_store_msgs</build_depend>
+  <build_depend>upper_body_detector</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
