The people_msgs package does not exist in indigo yet

--- a/perception_people_launch/package.xml
+++ b/perception_people_launch/package.xml
@@ -22,7 +22,7 @@
   <run_depend>bayes_people_tracker</run_depend>
   <run_depend>detector_msg_to_pose_array</run_depend>
   <!--<run_depend>leg_detector</run_depend>-->
-  <run_depend>people_msgs</run_depend>
+  <!--<run_depend>people_msgs</run_depend>-->
   <run_depend>bayes_people_tracker_logging</run_depend>
 
   <export/>
