--- a/odometry_to_motion_matrix/package.xml
+++ b/odometry_to_motion_matrix/package.xml
@@ -14,6 +14,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
+  <build_depend>cmake_modules</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>eigen_conversions</build_depend>
   <build_depend>nav_msgs</build_depend>
