--- a/visual_odometry/package.xml
+++ b/visual_odometry/package.xml
@@ -17,8 +17,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>boost</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_filters</build_depend>
@@ -29,6 +31,7 @@
   <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>eigen</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>message_filters</run_depend>
