Started to make opencv_warco installable

--- a/opencv_warco/CMakeLists.txt
+++ b/opencv_warco/CMakeLists.txt
@@ -145,18 +145,24 @@ target_link_libraries(opencv-warco-covs ${PROJECT_NAME} ${OpenCV_LIBS})
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS ${PROJECT_NAME} opencv-warco-train opencv-warco-pred
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS 
+    ${PROJECT_NAME} 
+    opencv-warco-train 
+    opencv-warco-pred
+    opencv-warco-traintest
+    opencv-warco-utest
+    opencv-warco-dists
+    opencv-warco-covs
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY opencv-warco/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h*"
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
