--- a/opencv_warco/package.xml
+++ b/opencv_warco/package.xml
@@ -26,5 +26,9 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>cv_bridge</build_depend>
 
+  <run_depend>cv_bridge</run_depend>
+
+  <export/>
 </package>
