Adding rule to migrate rosbags to new message format

--- a/bayes_people_tracker/package.xml
+++ b/bayes_people_tracker/package.xml
@@ -33,6 +33,9 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>rosbag_migration_rule</run_depend>
 
-  <export/>
+  <export>
+      <rosbag_migration_rule rule_file="share/people_tracker_rule.bmr"/>
+  </export>
 </package>
