Adding mygrate.py and missing install targets.

--- a/bayes_people_tracker/CMakeLists.txt
+++ b/bayes_people_tracker/CMakeLists.txt
@@ -83,3 +83,7 @@ install(DIRECTORY launch
 install(DIRECTORY config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY share
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
