Fixed a typo in the package.xml

--- a/wheelchair_detector/package.xml
+++ b/wheelchair_detector/package.xml
@@ -48,7 +48,7 @@
 
   <run_depend>rospy</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <eun_depend>sensor_msgs</eun_depend>
+  <run_depend>sensor_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
