Added missing launch file.

--- a/wheelchair_detector/CMakeLists.txt
+++ b/wheelchair_detector/CMakeLists.txt
@@ -146,6 +146,10 @@ install(PROGRAMS
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 ## Mark executables and/or libraries for installation
 # install(TARGETS wheelchair_detector wheelchair_detector_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
