changed from cdondrup to marc

--- a/people_tracker_filter/package.xml
+++ b/people_tracker_filter/package.xml
@@ -4,7 +4,7 @@
   <version>1.5.5</version>
   <description>The people_tracker_filter package</description>
 
-  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
 
   <license>MIT</license>
 
