--- a/bayes_people_tracker/package.xml
+++ b/bayes_people_tracker/package.xml
@@ -4,7 +4,7 @@
   <version>1.5.5</version>
   <description>The bayes_people_tracker package</description>
 
-  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
 
   <license>MIT</license>
 
