--- a/ground_plane_estimation/package.xml
+++ b/ground_plane_estimation/package.xml
@@ -4,7 +4,7 @@
   <version>1.5.5</version>
   <description>The ground_plane_estimation package</description>
 
-  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
 
   <license>BSD</license>
 
