--- a/odometry_to_motion_matrix/package.xml
+++ b/odometry_to_motion_matrix/package.xml
@@ -4,7 +4,7 @@
   <version>1.5.5</version>
   <description>The odometry_to_motion_matrix package</description>
 
-  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
 
   <license>MIT</license>
 
