--- a/strands_perception_people/package.xml
+++ b/strands_perception_people/package.xml
@@ -4,7 +4,7 @@
   <version>1.5.5</version>
   <description>The strands_perception_people metapackage</description>
 
-  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
+  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
 
   <license>MIT</license>
 
