Added SPENCER topics to upper_body_detector

--- a/upper_body_detector/CMakeLists.txt
+++ b/upper_body_detector/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED COMPONENTS
     sensor_msgs 
     std_msgs 
     visualization_msgs
+    spencer_tracking_msgs
+    spencer_diagnostics 
     )
 
 find_package(Boost REQUIRED COMPONENTS thread)
