--- a/upper_body_detector/package.xml
+++ b/upper_body_detector/package.xml
@@ -27,6 +27,9 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>spencer_diagnostics</build_depend>
+  <build_depend>spencer_tracking_msgs</build_depend>
+
 
   <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -40,6 +43,8 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>spencer_diagnostics</run_depend>
+  <run_depend>spencer_tracking_msgs</run_depend>
 
   <export/>
 </package>
