good testing node

--- a/bayes_people_tracker/CMakeLists.txt
+++ b/bayes_people_tracker/CMakeLists.txt
@@ -70,6 +70,10 @@ install(TARGETS bayes_people_tracker
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(FILES scripts/test_publisher.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   FILES_MATCHING PATTERN "*.h"
